# bookshop_management

./: CMakeLists.txt  README.md
inc/: book.hpp  books.hpp  database.hpp  filterBook.hpp  supplier.hpp  suppliers.hpp  validateBook.hpp
src/: book.cpp  books.cpp  filterBook.cpp  main.cpp  supplier.cpp  suppliers.cpp  validateBook.cpp
test/: testBook.cpp  testSupplier.cpp
